Implementation becoming more concrete. Gotta reinforce it.

--- a/MemeEconomy.Insights/MemeEconomy.Insights.csproj
+++ b/MemeEconomy.Insights/MemeEconomy.Insights.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\MemeEconomy.Data\MemeEconomy.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Graph\DataLoaders\" />
+  </ItemGroup>
+
 </Project>
