--- a/MemeEconomy.Insights/MemeEconomy.Insights.csproj
+++ b/MemeEconomy.Insights/MemeEconomy.Insights.csproj
@@ -15,16 +15,13 @@
     <PackageReference Include="GraphQL.Server.Transports.WebSockets" Version="3.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.8" />
     <PackageReference Include="RedditSharp" Version="1.1.14" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MemeEconomy.Data\MemeEconomy.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Graph\DataLoaders\" />
   </ItemGroup>
 
 </Project>
