--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
 - ssh-keyscan dokku.skyhop.org >> ~/.ssh/known_hosts
 - git remote add deploy dokku@dokku.skyhop.org:memeeconomy
 - git config --global push.default simple
-- git push deploy master
+- git push deploy HEAD:master
 before_install:
 - openssl aes-256-cbc -K $encrypted_3c79a2d9c9d9_key -iv $encrypted_3c79a2d9c9d9_iv
   -in deploy.key.enc -out deploy.key -d
